# swagger_server/controllers/my_sql_controller.py
@@ -1,6 +1,6 @@
 import connexion
-from swagger_server.models.domotica import Domotica
 from swagger_server.models.parameters import Parameters
+from swagger_server.models.parameters1 import Parameters1
 from datetime import date, datetime
 from typing import List, Dict
 from six import iteritems
@@ -10,14 +10,14 @@ from ..util import deserialize_date, deserialize_datetime
 def query_execute_post(Parameters):
     """
     query_execute_post
-    Executes the query 
+    Executes the query  
     :param Parameters: Array of Parameters of the query.
     :type Parameters: list | bytes
 
     :rtype: None
     """
     if connexion.request.is_json:
-        Parameters = [Parameters.from_dict(d) for d in connexion.request.get_json()]
+        Parameters = [Parameters1.from_dict(d) for d in connexion.request.get_json()]
     return 'do some magic!'
 
 
@@ -26,6 +26,6 @@ def query_get():
     query_get
     Returns the needed parameters for running a MySQL query in the current location 
 
-    :rtype: List[Domotica]
+    :rtype: List[Parameters]
     """
     return 'do some magic!'
