# swagger_server/models/domotica.py
@@ -12,25 +12,30 @@ class Domotica(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, name: str=None, type: str=None):
+    def __init__(self, id: float=None, name: str=None, type: str=None):
         """
         Domotica - a model defined in Swagger
 
+        :param id: The id of this Domotica.
+        :type id: float
         :param name: The name of this Domotica.
         :type name: str
         :param type: The type of this Domotica.
         :type type: str
         """
         self.swagger_types = {
+            'id': float,
             'name': str,
             'type': str
         }
 
         self.attribute_map = {
+            'id': 'id',
             'name': 'name',
             'type': 'type'
         }
 
+        self._id = id
         self._name = name
         self._type = type
 
@@ -45,6 +50,27 @@ class Domotica(Model):
         :rtype: Domotica
         """
         return deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> float:
+        """
+        Gets the id of this Domotica.
+
+        :return: The id of this Domotica.
+        :rtype: float
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: float):
+        """
+        Sets the id of this Domotica.
+
+        :param id: The id of this Domotica.
+        :type id: float
+        """
+
+        self._id = id
 
     @property
     def name(self) -> str:
