# swagger_server/models/parameters1.py
@@ -1,0 +1,116 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class Parameters1(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, name: str=None, type: str=None, example: str=None):
+        """
+        Parameters1 - a model defined in Swagger
+
+        :param name: The name of this Parameters1.
+        :type name: str
+        :param type: The type of this Parameters1.
+        :type type: str
+        :param example: The example of this Parameters1.
+        :type example: str
+        """
+        self.swagger_types = {
+            'name': str,
+            'type': str,
+            'example': str
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'type': 'type',
+            'example': 'example'
+        }
+
+        self._name = name
+        self._type = type
+        self._example = example
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Parameters1':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Parameters_1 of this Parameters1.
+        :rtype: Parameters1
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """
+        Gets the name of this Parameters1.
+
+        :return: The name of this Parameters1.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """
+        Sets the name of this Parameters1.
+
+        :param name: The name of this Parameters1.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def type(self) -> str:
+        """
+        Gets the type of this Parameters1.
+
+        :return: The type of this Parameters1.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type: str):
+        """
+        Sets the type of this Parameters1.
+
+        :param type: The type of this Parameters1.
+        :type type: str
+        """
+
+        self._type = type
+
+    @property
+    def example(self) -> str:
+        """
+        Gets the example of this Parameters1.
+
+        :return: The example of this Parameters1.
+        :rtype: str
+        """
+        return self._example
+
+    @example.setter
+    def example(self, example: str):
+        """
+        Sets the example of this Parameters1.
+
+        :param example: The example of this Parameters1.
+        :type example: str
+        """
+
+        self._example = example
+
